pop up close button fix on mobile

--- a/src/pages/projects-page/pop-up-info/PopUpInfo.style.scss
+++ b/src/pages/projects-page/pop-up-info/PopUpInfo.style.scss
@@ -31,13 +31,15 @@
     height: 30px;
     display: inline-block;
     position: absolute;
-    right: -5px;
-    top: -5px;
+    right: -10px;
+    top: -10px;
     background-image: url("../../../assets/close.svg");
     background-size: 50%;
     background-repeat: no-repeat;
     background-position: center;
     cursor: pointer;
+    z-index: 50;
+    border: 1px solid #3828a1;
   }
   .vid-container {
     width: 100%;
@@ -75,8 +77,11 @@
       font-size: 15px;
       font-weight: 500;
       background-color: #f7f5f5;
+      color: rgb(54, 54, 54);
       padding: 15px 5px;
       border-radius: 5px;
+      line-height: 1.3;
+      letter-spacing: 0.2px;
     }
     .tags-container {
       display: flex;
@@ -90,6 +95,7 @@
         padding: 5px;
         margin-right: 5px;
         margin-bottom: 5px;
+        border-radius: 3px;
       }
     }
   }
